--- a/nginx_upstream_reroute/nginx/nginx.conf
+++ b/nginx_upstream_reroute/nginx/nginx.conf
@@ -19,8 +19,8 @@ http {
     access_log /var/log/nginx/access.log main;
 
     upstream nodeapp {
-        server node1:8000;
-        server node2:8001;
+        server node1:8000 max_fails=3;
+        server node2:8001 max_fails=3;
     }
 
     server {
@@ -39,7 +39,6 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Connection "";
             proxy_next_upstream http_502 http_503;
-            proxy_next_upstream_tries 3;
         }
     }
 }
